--- a/ConsoleApplication1/ListTest.csproj
+++ b/ConsoleApplication1/ListTest.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{484A9F8E-9B8D-4271-8EAB-1672EFF9D5D0}</ProjectGuid>
+    <ProjectGuid>{3F11DFA9-C09D-4393-A491-E7A032246E4E}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>VRPpro</RootNamespace>
-    <AssemblyName>VRPpro</AssemblyName>
+    <RootNamespace>ListTest</RootNamespace>
+    <AssemblyName>ConsoleApplication1</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -45,16 +45,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AntVRP.cs" />
-    <Compile Include="CityInfo.cs" />
-    <Compile Include="Common.cs" />
-    <Compile Include="GA.cs" />
-    <Compile Include="GAAntVRP.cs" />
-    <Compile Include="DeepClone.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ReadVRPFile.cs" />
-    <Compile Include="Vehicle.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
